@@ -41,6 +41,9 @@ po4a main script (the deprecated po4a-* scripts are still buggy):
  * Deal properly with CRLF files coming from windows (GitHub's #409).
  * Allow to escape spaces in file names, or to quote them (GitHub's #412).
 
+Build scripts:
+ * Use xmlcatalog(1) to find DocBook XSL file (GitHub's #431).
+
 Translations:
  * Updated: French, thanks Jérémie Tarot.
  * Updated: German, thanks Helge Kreutzmann.
